# Practica_09_Funciones.2

./: .gitignore  CMakeLists.txt  programa  prueba.cc
Actividades_enunciado/approximate_root/: approximate_root.cc
Actividades_enunciado/capitalize_vowels/: capitalize_vowels.cc
Actividades_enunciado/hypotenuse/: hypotenuse.cc
Actividades_enunciado/polynomial/: polynomial.cc
Actividades_enunciado/producto_escalar/: scalar_product.cc  scalar_product.mk
clase/: Increasing_numbers.cc  programa
documentacion_y_ejecutables/: CMakeCache.txt  Makefile  cmake_install.cmake
proyecto/src/: CMakeLists.txt
