# Especifica la versión mínima de CMake
cmake_minimum_required(VERSION 3.10)

# Define el nombre del proyecto
project(MiProyecto)

# Agrega los archivos fuente
add_executable(programa.1 Actividades_enunciado/producto_escalar/scalar_product.cc)

# Agrega los archivos fuente
add_executable(programa.2 Actividades_enunciado/capitalize_vowels/capitalize_vowels.cc)

# Agrega los archivos fuente
add_executable(programa.3 Actividades_enunciado/polynomial/polynomial.cc)

# Agrega los archivos fuente
add_executable(programa.4 Actividades_enunciado/approximate_root/approximate_root.cc)

# Agrega los archivos fuente
add_executable(programa.5 Actividades_enunciado/hypotenuse/hypotenuse.cc)
